--- a/app/src/main/res/layout/fragment_route_schedules_day_departures.xml
+++ b/app/src/main/res/layout/fragment_route_schedules_day_departures.xml
@@ -10,9 +10,9 @@
         android:layout_height="36dp"
         android:text="Departing"
         android:textSize="16sp"
-        android:textColor="@color/body_text_1"
+        android:textColor="?android:attr/textColorPrimary"
         android:textStyle="bold"
-        android:background="@color/alerts"
+        android:background="?attr/secondaryBackgroundColor"
         android:paddingTop="8dp"
         android:paddingStart="14dp"
         android:paddingLeft="14dp"
@@ -28,9 +28,9 @@
         android:layout_height="36dp"
         android:text="Arriving"
         android:textSize="16sp"
-        android:textColor="@color/body_text_1"
+        android:textColor="?android:attr/textColorPrimary"
         android:textStyle="bold"
-        android:background="@color/alerts"
+        android:background="?attr/secondaryBackgroundColor"
         android:paddingTop="8dp"
         android:paddingEnd="14dp"
         android:paddingRight="14dp"
@@ -79,7 +79,7 @@
     <TextView
         android:id="@+id/empty_list_view"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintDimensionRatio="H,1:1"
