--- a/app/src/main/res/layout/mountainpass_item_details.xml
+++ b/app/src/main/res/layout/mountainpass_item_details.xml
@@ -28,7 +28,7 @@
 			<TextView
 				android:id="@+id/restriction_one_title"
 				android:textSize="@dimen/text_size_medium"
-				android:textColor="@color/black"
+				android:textColor="?android:attr/textColorPrimary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				/>
@@ -36,7 +36,7 @@
 			<TextView
 				android:id="@+id/restriction_one_text"
 				android:textSize="@dimen/text_size_medium"
-				android:textColor="@color/black"
+				android:textColor="?android:attr/textColorPrimary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:paddingBottom="10dp"
@@ -45,7 +45,7 @@
 			<TextView
 				android:id="@+id/restriction_two_title"
 				android:textSize="@dimen/text_size_medium"
-				android:textColor="@color/black"
+				android:textColor="?android:attr/textColorPrimary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				/>
@@ -53,7 +53,7 @@
 			<TextView
 				android:id="@+id/restriction_two_text"
 				android:textSize="@dimen/text_size_medium"
-				android:textColor="@color/black"
+				android:textColor="?android:attr/textColorPrimary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:paddingBottom="10dp"
@@ -62,7 +62,7 @@
 			<TextView
 				android:id="@+id/road_condition_title"
 				android:textSize="@dimen/text_size_medium"
-				android:textColor="@color/black"
+				android:textColor="?android:attr/textColorPrimary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				/>
@@ -70,7 +70,7 @@
 			<TextView
 				android:id="@+id/road_condition_text"
 				android:textSize="@dimen/text_size_medium"
-				android:textColor="@color/black"
+				android:textColor="?android:attr/textColorPrimary"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:paddingBottom="10dp"
@@ -79,7 +79,7 @@
     		<TextView
     		    android:id="@+id/weather_condition_title"
     		    android:textSize="@dimen/text_size_medium"
-                android:textColor="@color/black"
+				android:textColor="?android:attr/textColorPrimary"
     		    android:layout_width="match_parent"
     		    android:layout_height="wrap_content"
     		    />    
@@ -87,7 +87,7 @@
     		<TextView
     	    	android:id="@+id/weather_condition_text"
     	    	android:textSize="@dimen/text_size_medium"
-                android:textColor="@color/black"
+				android:textColor="?android:attr/textColorPrimary"
     	    	android:layout_width="match_parent"
     	    	android:layout_height="wrap_content"
     	    	android:paddingBottom="10dp"
@@ -101,14 +101,14 @@
     				<TextView
     				    android:id="@+id/temperature_title"
     				    android:textSize="@dimen/text_size_medium"
-                        android:textColor="@color/black"
+						android:textColor="?android:attr/textColorPrimary"
     				    android:width="115dp"
     				    android:paddingBottom="10dp"
     				    />
     				<TextView
     				    android:id="@+id/temperature_text"
     				    android:textSize="@dimen/text_size_medium"
-                        android:textColor="@color/black"
+						android:textColor="?android:attr/textColorPrimary"
     				    android:layout_width="match_parent"
     				    android:paddingBottom="10dp"
     				    />
@@ -117,7 +117,7 @@
     				<TextView
     				    android:id="@+id/elevation_title"
     				    android:textSize="@dimen/text_size_medium"
-                        android:textColor="@color/black"
+						android:textColor="?android:attr/textColorPrimary"
     				    android:width="115dp"
     				    android:paddingBottom="10dp"
     				    />    
@@ -125,7 +125,7 @@
     				<TextView
     				    android:id="@+id/elevation_text"
     				    android:textSize="@dimen/text_size_medium"
-                        android:textColor="@color/black"
+						android:textColor="?android:attr/textColorPrimary"
     				    android:layout_width="match_parent"
     				    android:paddingBottom="10dp"
     				    />	    
