--- a/app/src/main/res/layout/borderwait_row.xml
+++ b/app/src/main/res/layout/borderwait_row.xml
@@ -23,7 +23,7 @@
     <TextView
         android:id="@+id/toptext"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/icon"
@@ -43,7 +43,7 @@
     <TextView
         android:id="@+id/righttext"
         android:textSize="@dimen/text_size_large"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/star_button"
