--- a/app/src/main/res/layout/card_item_with_icon_twitter.xml
+++ b/app/src/main/res/layout/card_item_with_icon_twitter.xml
@@ -29,7 +29,7 @@
     <TextView
         android:id="@+id/user_name"
         android:textSize="@dimen/text_size_large"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/image"
@@ -46,7 +46,7 @@
         android:layout_alignLeft="@+id/user_name"
         android:layout_below="@+id/user_name"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
 		android:paddingRight="8dp"
 		android:paddingBottom="7dp"
         />
