--- a/app/src/main/res/layout/card_item_with_image_blog.xml
+++ b/app/src/main/res/layout/card_item_with_image_blog.xml
@@ -24,7 +24,7 @@
         android:ellipsize="end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#ffffffff"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_margin="8dp"
         android:paddingTop="5dp"
         android:paddingRight="8dp"
@@ -35,7 +35,7 @@
     <TextView
         android:id="@+id/title"
         android:textSize="@dimen/text_size_large"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:maxLines="2"
         android:ellipsize="end"
         android:layout_marginTop="8dp"
@@ -50,7 +50,7 @@
     <TextView
         android:id="@+id/description"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:maxLines="2"
         android:ellipsize="end"
         android:paddingLeft="8dp"
