--- a/app/src/main/res/layout/expandable_list_header_title.xml
+++ b/app/src/main/res/layout/expandable_list_header_title.xml
@@ -10,7 +10,7 @@
         android:textSize="@dimen/text_size_large"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:paddingTop="12dp"
         android:paddingRight="14dp"
         android:paddingEnd="14dp"
