--- a/app/src/main/res/layout/fragment_dynamic_toll_rates.xml
+++ b/app/src/main/res/layout/fragment_dynamic_toll_rates.xml
@@ -16,7 +16,7 @@
         android:paddingStart="8dp"
         android:paddingLeft="8dp"
         android:textSize="@dimen/text_size_small"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toTopOf="@id/travel_time_text"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -33,7 +33,7 @@
         android:paddingStart="8dp"
         android:paddingLeft="8dp"
         android:textSize="@dimen/text_size_small"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintTop_toBottomOf="@+id/header_text"
         app:layout_constraintBottom_toTopOf="@id/segment_control"/>
 
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
-            android:textColor="@color/segment_text_color"
+            android:textColor="?attr/secondaryTextColor"
             android:text="Northbound"
             android:button="@null"
             android:background="@drawable/segment_left_button_background"/>
@@ -76,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
-            android:textColor="@color/segment_text_color"
+            android:textColor="?attr/secondaryTextColor"
             android:text="Southbound"
             android:button="@null"
             android:background="@drawable/segment_right_button_background"/>
@@ -123,7 +123,7 @@
     <TextView
         android:id="@+id/empty_list_view"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -135,7 +135,8 @@
     <TextView
         android:id="@+id/disclaimer_text"
         android:textSize="@dimen/text_size_medium"
-        android:background="@color/alerts"
+        android:textColor="?android:attr/textColorPrimary"
+        android:background="?attr/secondaryBackgroundColor"
         android:text="Estimated toll rates provided as a courtesy. You’ll always pay the toll you see on actual road signs when you enter."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
