--- a/app/src/main/res/layout/fragment_high_impact_alerts.xml
+++ b/app/src/main/res/layout/fragment_high_impact_alerts.xml
@@ -5,7 +5,7 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:orientation="vertical"
 	android:baselineAligned="false"
-	android:background="@color/alerts">
+	android:background="?attr/secondaryBackgroundColor">
     
     <ProgressBar android:id="@+id/progress_bar"
 	    android:indeterminate="true"
