--- a/app/src/main/res/layout/fragment_list_with_progress_bar.xml
+++ b/app/src/main/res/layout/fragment_list_with_progress_bar.xml
@@ -24,7 +24,7 @@
         <TextView
             android:id="@+id/empty_list_view"
             android:textSize="@dimen/text_size_medium"
-            android:textColor="@color/black"
+            android:textColor="?android:attr/textColorPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
