--- a/app/src/main/res/layout/fragment_my_route.xml
+++ b/app/src/main/res/layout/fragment_my_route.xml
@@ -16,6 +16,7 @@
 
     <TextView
         android:id="@+id/empty_list_view"
+        android:textColor="?android:attr/textColorPrimary"
         android:text="No Saved Routes \n\n Track your commute using your phone's GPS \n to get a personal list of highway alerts on your route."
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
