--- a/app/src/main/res/layout/fragment_my_routes_recycler_list.xml
+++ b/app/src/main/res/layout/fragment_my_routes_recycler_list.xml
@@ -25,7 +25,7 @@
         <TextView
             android:id="@+id/new_route_info"
             android:textSize="@dimen/text_size_medium"
-            android:textColor="@color/black"
+            android:textColor="?android:attr/textColorPrimary"
             android:padding="24dp"
             android:lineSpacingExtra="4dp"
             android:layout_width="match_parent"
@@ -37,7 +37,7 @@
         <TextView
             android:id="@+id/create_new_route_header"
             android:textSize="@dimen/text_size_large"
-            android:textColor="@color/black"
+            android:textColor="?android:attr/textColorPrimary"
             android:padding="12dp"
             android:lineSpacingExtra="4dp"
             android:layout_width="match_parent"
@@ -49,7 +49,7 @@
         <TextView
             android:id="@+id/create_new_route"
             android:textSize="@dimen/text_size_medium"
-            android:textColor="@color/black"
+            android:textColor="?android:attr/textColorPrimary"
             android:paddingLeft="24dp"
             android:paddingStart="24dp"
             android:lineSpacingExtra="4dp"
@@ -62,7 +62,7 @@
         <TextView
             android:id="@+id/get_started"
             android:textSize="@dimen/text_size_medium"
-            android:textColor="@color/black"
+            android:textColor="?android:attr/textColorPrimary"
             android:paddingBottom="24dp"
             android:lineSpacingExtra="4dp"
             android:layout_width="match_parent"
