--- a/app/src/main/res/layout/fragment_recycler_list_with_swipe_refresh.xml
+++ b/app/src/main/res/layout/fragment_recycler_list_with_swipe_refresh.xml
@@ -61,7 +61,7 @@
     <TextView
         android:id="@+id/empty_list_view"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintDimensionRatio="H,1:1"
