--- a/app/src/main/res/layout/fragment_recycler_with_spinner_swipe_refresh.xml
+++ b/app/src/main/res/layout/fragment_recycler_with_spinner_swipe_refresh.xml
@@ -17,7 +17,6 @@
         app:layout_constraintStart_toEndOf="@+id/guidelineV_25"/>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,12 +46,12 @@
     <TextView
         android:id="@+id/empty_list_view"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:textColor="?android:attr/textColorPrimary"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_gravity="center"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineV_75"
-        app:layout_constraintStart_toEndOf="@+id/guidelineV_25"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
