--- a/app/src/main/res/layout/fragment_recycler_with_textview_swipe_refresh.xml
+++ b/app/src/main/res/layout/fragment_recycler_with_textview_swipe_refresh.xml
@@ -8,7 +8,7 @@
         android:id="@+id/title"
         android:textSize="@dimen/text_size_medium"
         android:lines="2"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
@@ -55,7 +55,7 @@
     <TextView
         android:id="@+id/empty_list_view"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintDimensionRatio="H,1:1"
