--- a/app/src/main/res/layout/incident_item.xml
+++ b/app/src/main/res/layout/incident_item.xml
@@ -8,7 +8,7 @@
 	<TextView
 		android:id="@+id/description"
 		android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black"
+		android:textColor="?android:attr/textColorPrimary"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_marginBottom="7dp" />
