--- a/app/src/main/res/layout/list_header.xml
+++ b/app/src/main/res/layout/list_header.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical"
 	android:layout_marginTop="5dp"
 	android:layout_marginBottom="5dp"
-	android:background="#E0E0E0"
+	android:background="?attr/secondaryBackgroundColor"
 	android:layout_width="match_parent"
 	android:layout_height="1dp"/>
 
@@ -19,7 +19,7 @@
 	android:textSize="@dimen/text_size_small"
 	android:layout_width="match_parent"
 	android:layout_height="48dp"
-	android:textColor="?attr/colorPrimary"
+	android:textColor="?attr/secondaryTextColor"
     android:paddingTop="12dp"
     android:paddingRight="14dp"
     android:paddingBottom="12dp"
