--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,7 +8,7 @@
 	<TextView
 	    android:id="@+id/title"
 	    android:textSize="@dimen/text_size_large"
-        android:textColor="@color/black"
+		android:textColor="?android:attr/textColorPrimary"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:gravity="center_vertical"	/>
