--- a/app/src/main/res/layout/list_item_amtrakschedules_times.xml
+++ b/app/src/main/res/layout/list_item_amtrakschedules_times.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/scheduledDeparture"
         android:textSize="@dimen/text_size_large"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
@@ -18,7 +18,7 @@
     <TextView
         android:id="@+id/scheduledArrival"
         android:textSize="@dimen/text_size_large"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
