--- a/app/src/main/res/layout/list_item_amtrakschedules_times_header.xml
+++ b/app/src/main/res/layout/list_item_amtrakschedules_times_header.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ffd6d6d6"
+    android:background="?attr/secondaryBackgroundColor"
     android:paddingTop="12dp"
     android:paddingRight="14dp"
     android:paddingBottom="12dp"
@@ -13,12 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-
     <TextView
          android:id="@+id/departing_title"
          android:text="@string/title_departing"
          android:textSize="@dimen/text_size_medium"
-         android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:layout_width="wrap_content"
@@ -29,7 +28,7 @@
          android:id="@+id/arriving_title"
          android:text="@string/title_arriving"
          android:textSize="@dimen/text_size_medium"
-         android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
          android:layout_alignParentRight="true"
          android:layout_alignParentTop="true"
          android:layout_width="wrap_content"
