--- a/app/src/main/res/layout/list_item_details_with_icon.xml
+++ b/app/src/main/res/layout/list_item_details_with_icon.xml
@@ -33,7 +33,7 @@
         android:layout_toRightOf="@+id/icon"
         android:layout_marginBottom="7dp"
         android:textSize="@dimen/text_size_large"
-        android:textColor="@color/black" />
+		android:textColor="?android:attr/textColorPrimary" />
 
      <TextView
         android:id="@+id/text"
@@ -43,7 +43,7 @@
         android:layout_toRightOf="@+id/icon"
         android:layout_marginBottom="7dp"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black" />
+		 android:textColor="?android:attr/textColorPrimary" />
     
     <TextView
         android:id="@+id/created_at"
