--- a/app/src/main/res/layout/list_item_my_route.xml
+++ b/app/src/main/res/layout/list_item_my_route.xml
@@ -44,7 +44,7 @@
         android:layout_marginBottom="8dp"
 
         android:textSize="@dimen/text_size_large"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         />
 
     <ImageButton
