--- a/app/src/main/res/layout/list_item_my_route_favorite.xml
+++ b/app/src/main/res/layout/list_item_my_route_favorite.xml
@@ -26,6 +26,6 @@
         android:layout_marginBottom="8dp"
 
         android:textSize="@dimen/text_size_large"
-        android:textColor="@color/black" />
+        android:textColor="?android:attr/textColorPrimary" />
 
 </RelativeLayout>
