--- a/app/src/main/res/layout/list_item_settings.xml
+++ b/app/src/main/res/layout/list_item_settings.xml
@@ -18,7 +18,7 @@
         android:layout_marginBottom="2dp"
 
         android:textSize="@dimen/text_size_large"
-        android:textColor="@color/black" />
+        android:textColor="?android:attr/textColorPrimary" />
 
     <ImageButton
         android:id="@+id/drag_handle"
