--- a/app/src/main/res/layout/list_item_with_star.xml
+++ b/app/src/main/res/layout/list_item_with_star.xml
@@ -19,7 +19,7 @@
 	    android:id="@+id/title"
         android:layout_toLeftOf="@+id/star_button"
 	    android:textSize="@dimen/text_size_large"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_marginBottom="7dp"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
         android:layout_below="@+id/title"
         android:layout_marginBottom="7dp"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black" />
+        android:textColor="?android:attr/textColorPrimary"/>
     
 	<TextView
         android:id="@+id/created_at"
