--- a/app/src/main/res/layout/simple_list_item_with_icon.xml
+++ b/app/src/main/res/layout/simple_list_item_with_icon.xml
@@ -15,7 +15,7 @@
      <TextView
         android:id="@+id/title"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/icon"
@@ -24,7 +24,7 @@
      <TextView
      	android:id="@+id/text"
         android:textSize="@dimen/text_size_medium"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_below="@id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
