--- a/app/src/main/res/layout/tollrates_four_col_row.xml
+++ b/app/src/main/res/layout/tollrates_four_col_row.xml
@@ -6,14 +6,14 @@
     android:padding="14dp">
  
 	<TextView android:id="@+id/number_axles"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
 		android:layout_width="110dp"
 		android:layout_height="wrap_content"
 		android:layout_weight="1"
 		/>
  
 	<TextView android:id="@+id/goodtogo_pass"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
 		android:gravity="center"
 		android:layout_width="70dp"
 		android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
 		/>
 
 	<TextView android:id="@+id/pay_by_cash"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
 		android:gravity="center"
 		android:layout_width="70dp"
 		android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
 		/>
      
 	<TextView android:id="@+id/pay_by_mail"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
 		android:gravity="center"
 		android:layout_width="70dp"
 		android:layout_height="wrap_content"
