--- a/app/src/main/res/layout/tollrates_three_col_header.xml
+++ b/app/src/main/res/layout/tollrates_three_col_header.xml
@@ -3,21 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ffd6d6d6"
+    android:background="?attr/secondaryBackgroundColor"
     android:paddingTop="12dp"
     android:paddingRight="14dp"
     android:paddingBottom="12dp"
     android:paddingLeft="14dp">
  
      <TextView android:id="@+id/hours_title"
-         android:textColor="@color/black"
+         android:textColor="?android:attr/textColorPrimary"
          android:layout_width="140dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          />
  
      <TextView android:id="@+id/goodtogo_pass_title"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
      	android:gravity="center"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
         />
  
      <TextView android:id="@+id/pay_by_mail_title"
-     	android:textColor="@color/black"
+     	android:textColor="?android:attr/textColorPrimary"
      	android:gravity="center"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
