--- a/app/src/main/res/layout/tollrates_three_col_row.xml
+++ b/app/src/main/res/layout/tollrates_three_col_row.xml
@@ -6,26 +6,23 @@
     android:padding="14dp">
  
      <TextView android:id="@+id/hours"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
+        android:layout_weight="1" />
  
      <TextView android:id="@+id/goodtogo_pass"
-        android:textColor="@color/black"
+        android:textColor="?android:attr/textColorPrimary"
      	android:gravity="center"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
+        android:layout_weight="1" />
  
      <TextView android:id="@+id/pay_by_mail"
-     	android:textColor="@color/black"
+     	android:textColor="?android:attr/textColorPrimary"
         android:gravity="center"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
+        android:layout_weight="1" />
         
 </LinearLayout>
