--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,7 +5,7 @@
     <color name="semi_white">#f888</color>
     <color name="semi_black">#ff7d7d7d</color>
 
-    <color name="secondary_text_color">#008065</color>
+    <color name="secondary_text_color">#00B140</color>
     <color name="secondary_background_color">#f333</color>
     <color name="secondary_off_background_color">#E0E0E0</color>
 
