--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="WSDOT" parent="Theme.AppCompat.DayNight.NoActionBar" >
+    <style name="WSDOT" parent="Theme.AppCompat.DayNight.NoActionBar" android:forceDarkAllowed="true" >
 
         <item name="colorPrimary">@color/primary_default</item>
         <item name="colorPrimaryDark">@color/primary_dark_default</item>
