--- a/app/src/main/res/drawable/regular_left_segment_state.xml
+++ b/app/src/main/res/drawable/regular_left_segment_state.xml
@@ -5,9 +5,7 @@ android:shape="rectangle" >
 <corners
     android:bottomLeftRadius="5dp"
     android:topLeftRadius="5dp"/>
-<solid
-    android:color="#fff" />
 <stroke
     android:width="1dp"
-    android:color="@color/primary_default"/>
+    android:color="?attr/secondaryTextColor"/>
 </shape>
