--- a/app/src/main/res/drawable/regular_right_segment_state.xml
+++ b/app/src/main/res/drawable/regular_right_segment_state.xml
@@ -5,9 +5,7 @@
     <corners
         android:bottomRightRadius="5dp"
         android:topRightRadius="5dp"/>
-    <solid
-        android:color="#fff" />
     <stroke
         android:width="1dp"
-        android:color="@color/primary_default"/>
+        android:color="?attr/secondaryTextColor"/>
 </shape>
