--- a/app/src/main/res/drawable/selected_right_segment_state.xml
+++ b/app/src/main/res/drawable/selected_right_segment_state.xml
@@ -6,8 +6,8 @@ android:shape="rectangle" >
     android:bottomRightRadius="5dp"
     android:topRightRadius="5dp" />
 <solid
-    android:color="@color/primary_default" />
+    android:color="?attr/secondaryTextColor"/>
 <stroke
     android:width="1dp"
-    android:color="@color/primary_default" />
+    android:color="?attr/secondaryTextColor"/>
 </shape>
