--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,6 @@
     <color name="semi_white">#f888</color>
     <color name="semi_black">#ff7d7d7d</color>
 
-    <color name="secondary_text_color">#004D40</color>
     <color name="secondary_background_color">#E0E0E0</color>
     <color name="secondary_off_background_color">#f333</color>
 
@@ -24,6 +23,8 @@
     <color name="primary_default">#008065</color>
     <color name="primary_dark_default">#004D40</color>
     <color name="accent_default">#FFEA00</color>
+
+    <color name="secondary_text">@color/primary_default</color>
 
     <color name="primary_worker">#FF6C0C</color>
     <color name="primary_dark_worker">#c43b00</color>
