--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,10 +7,9 @@
         <item name="colorPrimaryDark">@color/primary_dark_default</item>
         <item name="colorAccent">@color/accent_default</item>
 
-        <item name="secondaryTextColor">@color/secondary_text_color</item>
+        <item name="secondaryTextColor">@color/secondary_text</item>
         <item name="secondaryBackgroundColor">@color/secondary_background_color</item>
         <item name="secondaryOffBackgroundColor">@color/secondary_off_background_color</item>
-
 
         <item name="fabButtonColor">@color/primary_default</item>
 
@@ -19,56 +18,49 @@
 
     </style>
 
-    <style name="WSDOTWorkerOrange" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!--   your app branding color for the app bar -->
-        <item name="colorPrimary">@color/primary_worker</item>
-        <!--   darker variant for the status bar and contextual app bars -->
-        <!-- <item name="colorPrimaryDark">#004D40</item> -->
-        <item name="colorPrimaryDark">@color/primary_dark_worker</item>
+    <style name="WSDOTWorkerOrange" parent="Theme.AppCompat.DayNight.NoActionBar" android:forceDarkAllowed="true">
 
-        <!--   theme UI controls like checkboxes and text fields -->
+        <item name="colorPrimary">@color/primary_worker</item>
+        <item name="colorPrimaryDark">@color/primary_dark_worker</item>
         <item name="colorAccent">@color/accent_worker</item>
+
+        <item name="secondaryTextColor">@color/primary_dark_worker</item>
+        <item name="secondaryBackgroundColor">@color/secondary_background_color</item>
+        <item name="secondaryOffBackgroundColor">@color/secondary_off_background_color</item>
 
         <item name="fabButtonColor">@color/primary_worker</item>
 
         <item name="actionButtonStyle">@style/AppTheme.Widget.ActionButton</item>
-        <item name="toolbarTheme">@style/AppToolbarOrange</item>
+        <item name="toolbarTheme">@style/AppToolbarDefault</item>
 
     </style>
 
     <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">@color/primary_default</item>
+        <item name="colorAccent">?attr/secondaryTextColor</item>
     </style>
 
     <!-- Start default color styles -->
 
     <style name="AppToolbarDefault" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:colorBackground">@color/primary_dark_default</item>
+        <item name="android:colorBackground">?attr/colorPrimaryDark</item>
     </style>
-
-    <!-- Start orange theme color styles -->
-
-    <style name="AppToolbarOrange" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:colorBackground">@color/primary_dark_worker</item>
-    </style>
-
-    <!-- end orange theme color styles -->
 
     <style name="AppTheme.Button" parent="Widget.AppCompat.Button.Colored">
         <item name="colorButtonNormal">?attr/colorPrimary</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
     <style name="AppTheme.ButtonNegative" parent="Widget.AppCompat.Button.Colored">
         <item name="colorButtonNormal">#e53935</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
 
     <style name="WSDOT.popup" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowBackground">@color/secondary_background_color</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="android:windowBackground">?attr/secondaryBackgroundColor</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowMinWidthMajor">@android:dimen/dialog_min_width_major</item>
@@ -147,7 +139,7 @@
     </style>
 
     <style name="HighImpactAlertsButtonItem" parent="@style/HighImpactAlertsStaticItem">
-        <item name="android:textColor">@color/secondary_text_color</item>
+        <item name="android:textColor">?attr/secondaryTextColor</item>
         <item name="android:background">@drawable/high_impact_alerts_button</item>
         <item name="android:paddingRight">@dimen/high_impact_alerts_button_right_padding</item>
         <item name="android:focusable">true</item>
